Etterlys innteksmelding ved mangeler, selv om mottatt noen (#6571)